typescript/checker/tests/conformance/es6/templates/templateStringInNewExpressionES6.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            32,
        ),
        ctxt: #0,
    },
    callee: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    20,
                ),
                hi: BytePos(
                    32,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
}
 --> $DIR/tests/conformance/es6/templates/templateStringInNewExpressionES6.ts:2:5
  |
2 | new `abc${0}abc`(`hello ${0} world`, `   `, `1${2}3`);
  |     ^^^^^^^^^^^^

